Test that '#?DOES' is not seen in subsequent blocks

--- a/t/04-combinations.in
+++ b/t/04-combinations.in
@@ -1,5 +1,5 @@
 use Test;
-plan 6;
+plan 10;
 
 sub same-type ($x, $y) {
     is $x.WHAT, $y.WHAT;
@@ -19,3 +19,14 @@ is 42.WHAT, Int, 'some reason';
 is 2+2, 4;
 #?impl skip 'NYI'
 is 2-2, 0;
+
+#?DOES 2
+{
+    same-type(42, 4);
+}
+
+{
+    is 1, 1;
+    #?impl skip 'NYI'
+    is 2, 2;
+}
