Add fudge test for implementation backend and update fudge tests so the fudge results run with Rakudo

--- a/t/02-version.in
+++ b/t/02-version.in
@@ -1,3 +1,6 @@
+use v6;
+use Test;
+
 plan 8;
 
 is 2**2, 4;
@@ -5,7 +8,7 @@ is 2**2, 4;
 is 2+2, 4;
 #?v6.0.5+ 'GH issue #xyz'
 {
-    is "Life, the Universe, and Everything".WHY, 42;
+    is "Life, the Universe and Everything".WHY, 42;
     is 42.WHAT, Int, 'some reason';
 }
 #?v6.0.0..v6.0.2 2
