--- a/t/01-implname.in
+++ b/t/01-implname.in
@@ -1,11 +1,14 @@
-plan 6;
+use v6;
+use Test;
+
+plan 9;
 
 is 2**2, 4;
 #?impl-1 todo 'NYI'
 is 2+2, 4;
 #?impl-2 skip 'NYI'
 {
-    is "Life, the Universe, and Everything".WHY, 42;
+    is "Life, the Universe and Everything".WHY, 42;
     is 42.WHAT, Int, 'some reason';
 }
 #?impl-1 2 todo 'NYI'
@@ -16,3 +19,6 @@ is 3*4, 12;
 #?impl-2 1 todo 'NYI'
 is 2-2, 0;
 is 3*4, 12;
+
+#?impl-1.backend todo 'NYI'
+is +1, 1;
