--- a/t/07-register_function.in
+++ b/t/07-register_function.in
@@ -1,4 +1,7 @@
-plan 3;
+use v6;
+use Test;
+
+plan 2;
 
 #?DOES 1
 sub registered_function ($x) { $x };
@@ -7,6 +10,8 @@ sub registered_function ($x) { $x };
 registered_function 2;
 ok 4;
 
-#?impl-1 todo 'NYI'
+#?impl-1 skip 'NYI'
+{
 not_registered_function 2;
 ok 4; 
+}
